--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,16 +103,18 @@ body {
   padding: 0;
   list-style-type: none;
 }
-
+/*
 .navigation-item:first-child {
   margin-right: 198px;
 }
+*/
 
 .user-navigation-link {
   font-family: "Rubik", sans-serif;
   text-decoration: none;
   color: #000000;
 }
+
 .navigation-list {
   display: flex;
   justify-content: space-between;
@@ -121,7 +123,6 @@ body {
   padding-left: 60px;
   padding-right: 60px;
   list-style-type: none;
-
 }
 
 .navigation-link {
@@ -131,6 +132,34 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
+}
+
+.popap-menu {
+  display: flex;
+  margin-top: 29px;
+  padding-bottom: 27px;
+  min-height: 120px;
+}
+
+.column-1 {
+  width: 222px;
+  margin-right: 30px;
+}
+
+.column-2 {
+  width: 211px;
+}
+
+.catalog-list {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+
+.catalog-list-column {
+  margin-top: 29px;
+  padding: 0;
+  list-style-type: none;
 }
 
 .main-index {
@@ -616,6 +645,7 @@ body {
 
 .select-control-container {
   display: flex;
+  margin-bottom: 70px;
   padding-top: 26px;
   padding-bottom: 26px;
   padding-left: 40px;
@@ -633,7 +663,33 @@ body {
   color: #000000;
 }
 
+.product-list-catalog {
+  display: grid;
+  grid-template-columns: repeat(2, 360px);
+  gap: 40px;
+  margin-top: 0;
+  margin-bottom: 44px;
+  padding-left: 40px;
+  list-style-type: none;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-card-image {
+  margin-bottom: 32px;
+}
+
+.product-card-content {
+  display: flex;
+  justify-content: space-between;
+}
+
 .product-card-title {
+  max-width: 218px;
+  margin: 0;
   font-family: "Rubik", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -643,6 +699,7 @@ body {
 }
 
 .product-card-price {
+  grid-row: 2/-2;
   font-family: "Rubik", sans-serif;
   line-height: 21px;
   font-weight: 400;
