--- a/8/styles/styles.css
+++ b/8/styles/styles.css
@@ -78,7 +78,7 @@ body {
 }
 
 .header-logo:focus {
-  border: 2px solid #AF4FFF ;
+  outline: 2px solid #AF4FFF ;
 }
 
 .page-header-wrapper {
@@ -186,7 +186,7 @@ body {
 }
 
 .user-navigation-link:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .navigation-list {
@@ -220,7 +220,7 @@ body {
 }
 
 .navigation-link:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .user-navigation-item:first-child {
@@ -321,6 +321,7 @@ body {
 }
 
 .popular-goods-slider {
+  position: relative;
   margin-bottom: 70px;
   background-image: linear-gradient(#FFE17F 115px, transparent 0%);
 }
@@ -334,6 +335,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 
 .product-image-container {
   position: relative;
@@ -359,7 +361,7 @@ body {
   position: absolute;
   content: "";
   top: 250px;
-  right: 0;
+  left: 540px;
   width: 20px;
   height: 60px;
   z-index: 2;
@@ -378,11 +380,15 @@ body {
 }
 
 .slider-arrow:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .catalog-list {
   list-style-type: none;
+}
+
+.catalog-item {
+  padding-bottom: 10px;
 }
 
 .catalog-item-link {
@@ -534,7 +540,7 @@ body {
 }
 
 .slider-pagination-button:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .slider-pagination-button-current {
@@ -550,7 +556,11 @@ body {
 }
 
 .slider-pagination-button-current:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
+}
+
+.slider-item-hidden {
+  display: none;
 }
 
 .products-catalog {
@@ -596,7 +606,7 @@ body {
 }
 
 .product-item:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .product-title {
@@ -617,7 +627,7 @@ body {
 .service::before {
   position: absolute;
   content: "";
-  width: 1440px;
+  width: 100%;
   height: 289px;
   bottom: 0;
   z-index: -1;
@@ -643,6 +653,10 @@ body {
   margin-bottom: 36px;
 }
 
+.service-item-hidden {
+  display: none;
+}
+
 .service-btn {
   display: block;
   width: 152px;
@@ -665,6 +679,22 @@ body {
   text-align: left;
   color: #FFE17F;
   background-color: #000000;
+}
+
+.service-hidden-btn {
+  position: relative;
+}
+
+.service-hidden-btn::before {
+  content: "";
+  position: absolute;
+  margin-top: -4px;
+  height: 8px;
+  width: 160px;
+  left: 0;
+  top: 50%;
+  background-color: #FFE17F;
+  z-index: -1;
 }
 
 .service-list {
@@ -771,6 +801,8 @@ body {
   position: relative;
   width: 125px;
   margin: 0;
+  background-color: transparent;
+  border: none;
 }
 
 .advantage-info::before {
@@ -979,7 +1011,7 @@ body {
 }
 
 .footer-logo:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .top-footer {
@@ -1029,7 +1061,7 @@ body {
 }
 
 .footer-services-link:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .footer-phone {
@@ -1049,7 +1081,7 @@ body {
 }
 
 .footer-phone:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .footer-social {
@@ -1115,7 +1147,7 @@ body {
 }
 
 .footer-social-link:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 
@@ -1128,7 +1160,7 @@ body {
 }
 
 .htmlacademy-logo:focus {
-  border: 1px solid #AF4FFF;
+  outline: 1px solid #AF4FFF;
 }
 
 .about-text {
@@ -1197,7 +1229,7 @@ body {
 }
 
 .breadcrumbs-link:focus {
-  border: 2px solid #AF4FFF;
+  outline: 2px solid #AF4FFF;
 }
 
 .main-wrapper {
@@ -1458,11 +1490,12 @@ body {
   display: flex;
   width: 60px;
   padding-right: 40px;
+
 }
 
-.filter-arrow-up::before {
-  position: absolute;
-  content: "";
+
+.filter-arrow-up {
+
   width: 30px;
   height: 30px;
   left: 0;
@@ -1473,9 +1506,7 @@ body {
   opacity: 0.2;
 }
 
-.filter-arrow-down::before {
-  position: absolute;
-  content: "";
+.filter-arrow-down {
   width: 30px;
   height: 30px;
   left: 30px;
@@ -1484,6 +1515,21 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0.2;
+}
+
+.filter-arrow-down:hover,
+.filter-arrow-up:hover {
+  opacity: 0.5;
+}
+
+.filter-arrow-down:active,
+.filter-arrow-up:active {
+  opacity: 1;
+}
+
+.filter-arrow-down:focus,
+.filter-arrow-up:focus {
+  outline: 2px solid #AF4FFF;
 }
 
 .product-list-catalog {
@@ -1499,6 +1545,7 @@ body {
 .product-card {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .product-card-image {
@@ -1527,6 +1574,56 @@ body {
   line-height: 21px;
   font-weight: 400;
   color: #444444;
+}
+
+.product-card:hover .product-card-info {
+  display: block;
+}
+
+.product-card-info {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  padding: 168px 75px 168px 75px;
+  background: rgba(240, 240, 240, 0.8);
+}
+
+.product-card-button {
+  display: block;
+  position: relative;
+  width: 210px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  z-index: 2;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 800;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+}
+
+.product-card-button::before{
+  content: "";
+  position: absolute;
+  margin-top: -4px;
+  z-index: -2;
+  height: 8px;
+  width: 100%;
+  left: 0;
+  top: 50%;
+  background-color: #FFE17F;
+}
+
+.product-card:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.product-card:active .product-card-button::before {
+  background-color: #FFCC33;;
 }
 
 .pagination-show-more {
@@ -1565,7 +1662,7 @@ body {
   margin-right: 40px;
   margin-bottom: 74px;
   padding-right: 25px;
-  padding-left: 25px;
+  /*padding-left: 25px;*/
   text-transform: uppercase;
   background-color: #EBEBEB;
 }
@@ -1575,17 +1672,43 @@ body {
   justify-content: space-between;
   width: 200px;
   margin: 0;
-  padding-top: 26px;
-  padding-bottom: 26px;
+  padding: 0;
   list-style-type: none;
+  font-size: 16px;
+  line-height: 20px;
   color: #444444;
 }
 
 .pagination-prev {
+  display: block;
+  padding: 25px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.2em;
+  color: #000000;
+}
+
+.pagination-prev:hover {
+  background-color: #DCDCDC;
+}
+
+.pagination-prev:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.pagination-prev:active {
+  opacity: 0.3;
+}
+
+.pagination-item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 40px;
+  height: 40px;
 }
 
 .pagination-link {
@@ -1595,8 +1718,434 @@ body {
   letter-spacing: 0.2em;
 }
 
+.pagination-link:hover {
+  opacity: 1;;
+}
+
+.pagination-link:active {
+  opacity: 0.1;
+}
+
+.pagination-link:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.pagination-current {
+  opacity: 0.6;
+}
+
 .pagination-next {
+  font-family: 'Raleway';
   font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
   opacity: 1;
   color: #000000;
+}
+
+.modal {
+  position: fixed;
+  display: none;
+  top: 50%;
+  left: 50%;
+}
+
+.modal-delivery {
+  width: 740px;
+  height: 568px;
+  margin-top: -250px;
+  margin-left: -450px;
+  padding-left: 80px;
+  padding-right: 80px;
+  border: 10px solid #000000;
+  background-color: #FFFFFF;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.modal-show {
+  display: block;
+}
+
+.modal-title-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 72px;
+  margin-bottom: 42px;
+}
+
+.modal-title {
+  margin: 0;
+}
+
+.modal-close-button {
+  width: 26px;
+  height: 26px;
+  background-image: url(../images/icon-close-modal.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  border: none;
+}
+
+.modal-close-button:hover {
+  opacity: 0.6;
+}
+
+.modal-close-button:active {
+  opacity: 0.3;
+}
+
+.modal-close-button:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.modal-top-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-label {
+  margin-bottom: 14px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
+.user-name {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-email {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input {
+  height: 60px;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 20px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #F0F0F0;
+}
+
+.user-name-input {
+  position: relative;
+  width: 340px;
+  border: none;
+}
+
+.user-name-input::before {
+  position: absolute;
+  content: "";
+  width: 13px;
+  height: 12px;
+  background-image: url(../images/icon-modal-user.svg);
+  top: 0;
+  right: 0;
+}
+
+.user-email-input {
+  width: 336px;
+  height: 56px;
+  border: 2px solid #FF3D3D;
+}
+
+.modal-error {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FF3D3D;
+}
+
+.modal-bottom-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 42px;
+  align-items: center;
+}
+
+.user-message {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.user-message-input {
+  width: 520px;
+  margin-right: 20px;
+  border: none;
+}
+
+.quantity {
+  position: relative;
+}
+
+.quantity-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 4px;
+}
+
+.quantity-input {
+  width: 60px;
+  padding: 0;
+  text-align: center;
+  border: none;
+}
+
+.quantity-input::-webkit-outer-spin-button,
+.quantity-input::-webkit-inner-spin-button  {
+  -webkit-appearance: none;
+}
+
+.quantity-button {
+  display: block;
+  width: 60px;
+  margin: 0;
+  border: none;
+  background-color: #F0F0F0;
+}
+
+.tooltip {
+  position: absolute;
+  margin-top: 4px;
+  margin-left: 2px;
+  width: 16px;
+  height: 16px;
+}
+
+.tooltip-toggle {
+  display: block;
+  margin-left: 8px;
+  margin-top: -5px;
+  padding: 0;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+}
+
+.tooltip-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  color: #FFE17F;
+}
+
+.tooltip-text {
+  display: none;
+  position: absolute;
+  top: 28px;
+  right: -70px;
+  margin-bottom: 10px;
+  width: 164px;
+  padding: 19px 17px 10px 19px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #000000;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text {
+  display: block;
+}
+
+.modal-button {
+  width: 190px;
+  background-color: transparent;
+  border: none;
+}
+
+.user-navigation-item {
+  position: relative;
+}
+
+.popover {
+  position: absolute;
+  top: 40px;
+  right: -75px;
+  z-index: 5;
+  box-sizing: border-box;
+  width: 320px;
+  min-height: 301px;
+  font-family: 'Rubik';
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #000000;
+}
+
+.popover-close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 72px;
+  height: 70px;
+}
+
+.popover-cart .popover-close-button {
+  padding-left: 44px;
+  background-image: url(../images/icon-basket.svg);
+  background-repeat: no-repeat;
+  background-position: 22px center;
+  background-color: inherit;
+  border: none;
+}
+
+.popover-content {
+  height: 100%;
+  padding: 20px;
+}
+
+.cart-items-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.cart-item {
+  display: flex;
+  padding-right: 17px;
+  margin-bottom: 41px;
+}
+
+.cart-item:last-child {
+  margin-bottom: 20px;
+}
+
+.cart-item-description {
+  max-width: 152px;
+  margin: 0;
+  text-align: start;
+}
+
+.cart-img {
+  margin-right: 23px;
+}
+
+.cart-img:hover {
+  opacity: 0.6;
+}
+
+.cart-img:active {
+  opacity: 0.3;
+}
+
+.cart-item-container {
+  display: flex;
+  margin-right: 10px;
+}
+
+.cart-item-container:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.cart-item-button {
+  width: 10px;
+  height: 10px;
+  margin-left: auto;
+  margin-bottom: auto;
+  background-image: url(../images/icon-close-popover.svg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-color: inherit;
+  border: none;
+}
+
+.cart-item-button:hover {
+  opacity: 0.6;
+}
+
+.cart-item-button:active {
+  opacity: 0.3;
+}
+
+.basket {
+  position: relative;
+}
+
+.badge {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  content: "";
+  width: 21px;
+  height: 21px;
+  top: 4px;
+  left: -17px;
+  font-family: 'Rubik';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 50%;
+  z-index: 0;
+}
+
+.user-order {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 44px;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #1A1A1A;
+}
+
+.user-order-button {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 14px 23px 14px 23px;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  background-color: #FFFFFF;
+  border: none;
+}
+
+.user-order-button:hover {
+  background-color: #FFE17F;
+}
+
+.user-order-button:active {
+  opacity: 0.3;
+}
+
+.popover-active {
+  display: block;
+}
+
+.popover-hidden {
+  display: none;
 }
